removed bootstrap, fixed issue where posters werent aligning properly from top 20. fixed font sizes for title and ratings. maybe align title to the center later

--- a/style.css
+++ b/style.css
@@ -9,16 +9,18 @@ body{
 }
 
 .top20{
+    padding-left: 75px;
     margin: 3rem;
     display: inline-block;
+    align-items: center;
 }
 .film{
     background-color: #373b69;
     width: 300px;
     border-radius: 2px;
     box-shadow: 0 10px 8px rgba(0,0,0,0.2);
-    color: white;
-    /* margin: 3rem; */
+    
+    
     /* display: inline-block; */
     /* margin: 3rem; */
     /* display: flex;
@@ -28,6 +30,10 @@ body{
 }
 .film-info{
     padding: 1rem;
+    color: white;
+    /* THINK ABOUT THIS VVV */
+    /* text-align: center; */
+  
     
     
 }
@@ -35,6 +41,8 @@ body{
 .film-info span {
     background-color: #22254b;
     padding: 5px;
+    font-size: 15px;
+    margin-left: 15rem;
 }
 
 
@@ -64,6 +72,7 @@ body{
 #title{
     text-align: center;
     margin-right: 50px;
+    color: white;
 }
 
 .poster{
@@ -74,6 +83,7 @@ body{
 
 #overview{
     text-align: center;
+    color: white;
 }
 #emtpy-div{
     position: relative;
